--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chat-application": "file:..",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -45,6 +47,7 @@
     "tailwindcss": "^3.4.1"
   },
   "proxy": "http://localhost:5000",
+  "secure": false,
   "plugins": [
     [
       "@babel/plugin-proposal-private-property-in-object",
